--- a/webview/index.html
+++ b/webview/index.html
@@ -41,14 +41,14 @@
                 <div class="project-icon">❌</div>
                 <h3>Tic Tac Toe</h3>
                 <p>Classic game of X's and O's. Play against a friend or challenge yourself!</p>
-                <a href="/website/tictactoe/tic.html" class="linkbtn" target="_blank">Play Now</a>
+                <a href="/tictactoe/tic.html" class="linkbtn" target="_blank">Play Now</a>
             </div>
 
             <div class="project-card fade-in" id="Rock">
                 <div class="project-icon">✂</div>
                 <h3>Rock Paper Scissors</h3>
                 <p>The timeless game of strategy and luck. Beat the computer!</p>
-                <a href="/website/rockpaperscissors/rock.html" class="linkbtn" target="_blank">Play Game</a>
+                <a href="/rockpaperscissors/rock.html" class="linkbtn" target="_blank">Play Game</a>
             </div>
 
             <div class="project-card coming-soon fade-in">
