--- a/webview/index.html
+++ b/webview/index.html
@@ -51,11 +51,11 @@
                 <a href="/rockpaperscissors/rock.html" class="linkbtn" target="_blank">Play Game</a>
             </div>
 
-            <div class="project-card coming-soon fade-in">
+            <div class="project-card fade-in" id="Calculator">
                 <div class="project-icon">🧮</div>
                 <h3>Calculator</h3>
-                <p>Advanced calculator with multiple functions - Coming Soon!</p>
-                <span class="linkbtn" style="opacity: 0.5; cursor: not-allowed;">Coming Soon</span>
+                <p>Advanced calculator with multiple functions. Like Real One!</p>
+         <a href="/calculator/calculator.html" class="linkbtn" target="_blank"> Check Now</a>
             </div>
 
             <div class="project-card coming-soon fade-in">
