--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="refresh" content="0; url=/webview/">
-    <title>Ramup Games</title>
+    <title>Website</title>
 </head>
 <body>
     <p>Loading...</p>
