--- a/index.html
+++ b/index.html
@@ -41,21 +41,21 @@
                 <div class="project-icon">❌</div>
                 <h3>Tic Tac Toe</h3>
                 <p>Classic game of X's and O's. Play against a friend or challenge yourself!</p>
-                <a href="/tictactoe/tic.html" class="linkbtn" target="_blank">Play Now</a>
+                <a href="tictactoe/tic.html" class="linkbtn" target="_blank">Play Now</a>
             </div>
 
             <div class="project-card fade-in" id="Rock">
                 <div class="project-icon">✂</div>
                 <h3>Rock Paper Scissors</h3>
                 <p>The timeless game of strategy and luck. Beat the computer!</p>
-                <a href="/rockpaperscissors/rock.html" class="linkbtn" target="_blank">Play Game</a>
+                <a href="rockpaperscissors/rock.html" class="linkbtn" target="_blank">Play Game</a>
             </div>
 
             <div class="project-card fade-in" id="Calculator">
                 <div class="project-icon">🧮</div>
                 <h3>Calculator</h3>
                 <p>Advanced calculator with multiple functions. Like Real One!</p>
-         <a href="/calculator/calculator.html" class="linkbtn" target="_blank"> Check Now</a>
+         <a href="calculator/calculator.html" class="linkbtn" target="_blank"> Check Now</a>
             </div>
 
             <div class="project-card coming-soon fade-in">
