Reset Button Added

--- a/rockpaperscissors/rock.html
+++ b/rockpaperscissors/rock.html
@@ -49,8 +49,7 @@
             <p>Computer</p>
         </div>
     </div>
-
-    
+  <button id="reset">RESET GAME</button>
     <script src="rock.js"> </script>
 </body>
 
