--- a/tictactoe/tic.html
+++ b/tictactoe/tic.html
@@ -29,6 +29,7 @@
 
   <button id="reset">RESET GAME</button>
 
-  <script src="tic.js"></script>
+  <script src="tic.js?v=2"></script>
+
 </body>
 </html>
