--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
          <a href="calculator/calculator.html" class="linkbtn" target="_blank"> Check Now</a>
             </div>
 
-            <div class="project-card coming-soon fade-in">
+            <div class="project-card fade-in" id="typing">
                 <div class="project-icon">🤯</div>
-                <h3>Quiz Game</h3>
-                <p>Test your knowledge with interactive quizzes - Coming Soon!</p>
-                <span class="linkbtn" style="opacity: 0.5; cursor: not-allowed;">Coming Soon</span>
+                <h3>Speed Test</h3>
+                <p>Test your typing speed with Random words. Interesting Test!</p>
+                <a href="typingspeedtest/typing.html" class="linkbtn" target="_blank"> Test Now</a>
             </div>
         </div>
 
