--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
                 <a href="rockpaperscissors/rock.html" class="linkbtn" target="_blank">Play Game</a>
             </div>
 
-            <div class="project-card fade-in" id="Calculator">
+            <div class="project-card fade-in disabled" id="Calculator">
                 <div class="project-icon">🧮</div>
                 <h3>Calculator</h3>
                 <p>Advanced calculator with multiple functions. Like Real One!</p>
-         <a href="calculator/calculator.html" class="linkbtn" target="_blank"> Check Now</a>
+         <a href="calculator/calculator.html" class="linkbtn" target="_blank" > Check Now</a>
             </div>
 
-            <div class="project-card fade-in" id="typing">
+            <div class="project-card fade-in disabled" id="Typing">
                 <div class="project-icon">🤯</div>
                 <h3>Speed Test</h3>
                 <p>Test your typing speed with Random words. Interesting Test!</p>
