--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
                 <p>The timeless game of strategy and luck. Beat the computer!</p>
                 <a href="rockpaperscissors/rock.html" class="linkbtn" target="_blank">Play Game</a>
             </div>
+            <div class="project-card fade-in" id="Quiz">
+                <div class="project-icon">📝</div>
+                <h3>CEE Questions</h3>
+                <p>Get chapter-wise CEE questions here and practice to master every topic!</p>
+                <a href="https://cee-quiz.onrender.com" class="linkbtn" target="_blank"> Check Now </a>
+            </div>
 
             <div class="project-card fade-in disabled" id="Calculator">
                 <div class="project-icon">🧮</div>
